--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,11 @@ project(CrossSocket)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_library(CrossSocket SHARED src/socket.cpp src/socket.hpp src/address.cpp src/address.hpp)
+add_library(CrossSocket SHARED
+        src/socket.cpp
+        src/socket.hpp
+        src/address.cpp
+        src/address.hpp)
 if(WIN32)
     target_link_libraries(CrossSocket wsock32 ws2_32)
 endif(WIN32)
